--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>SpaceWalkers</title>
 
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
-  <link href="css/index.css" rel="stylesheet">
+  <link href="/less/index.css" rel="stylesheet">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -17,11 +18,24 @@
 <body>
 
  <!-- navigation code here -->
-
+ <div class="navbar">
+   <div class="nav-text">
+     <h1>SpaceWalkers</h1>
+   </div>
+  
+  <nav>
+    <a href="">Home</a>
+    <a href="">About Us</a>
+    <a href="">Blog</a>
+    <a href="">Contact</a>
+    <a href="">Sign In</a>
+  </nav>
+ </div>
+ 
   <div class="container home">
 
     <header class="intro">
-       <!-- image code here -->
+      <img src="/img/main-header.png" class="header-img">
 
       <h2>Lift Off</h2>
     
